--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "Ryan Lelek <ryanlelek@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@raneto/theme-default": "0.0.1",
-    "raneto": "0.17.2",
-    "debug": "4.3.4"
+    "@raneto/theme-default": "0.5.0",
+    "raneto": "0.17.8"
   }
 }
